--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 #Databse URLs
+JAWSDB_URL=mysql://loh90pq2t7au10jc:p6lybcno6vjg0pkl@gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ftmujaqo1x3aicet'
 
-CLEARDB_DATABASE_URL: mysql://b8f0d82a4e03bd:9e958838@us-cdbr-iron-east-02.cleardb.net/heroku_c981218d088279c?reconnect=true
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=Duckbutter1
+DB_NAME=burgers_db
